# RL_GestureRecognition

./: CMakeLists.txt  TestingSamples.csv  TrainingSamples.csv  manifest.xml  stack.xml  tracker.launch
include/: CvRTreesMultiClass.hpp  GestureState.hpp  RandomForest.hpp  Sample.hpp  filter.hpp  normalization.hpp
msg/: Dir.msg~  Feat.msg
readMe/: README.md  Todo.txt  UserGuide.txt
src/: CvRTreesMultiClass.cpp  FeatureExtractor.cpp  GestureState.cpp  RandomForest.cpp  Sample.cpp  classifier.cpp  converter.cpp  filter.cpp  normalization.cpp  tester.cpp  trainer.cpp
src/gesture_recognition/msg/: _Feat.py  _Feat.py~  __init__.py
